--- a/form/formulario.html
+++ b/form/formulario.html
@@ -8,11 +8,11 @@
     <body>
         <form action="formulario.php">
           Usuario:
-          <input type="text" name="firstname" value="Mickey">
+          <input type="text" name="firstname" value="Juan">
           <br/>
           <br/>
           Contraseña:
-          <input type="text" name="lastname" value="Mouse">
+          <input type="text" name="lastname" value="cagatelorito">
   <br/><br/>
   <input type="submit" value="Entrar">
 </form>
