--- a/form/formulario.html
+++ b/form/formulario.html
@@ -14,14 +14,14 @@ crossorigin="anonymous">
         <br/>
         <br/>
         <br/>
-<form>
+<form action="reciDatos.php" method="post" >
      <div class="form-group" >
          <label for="inputUser" class="text-info">Usuario</label>
-         <input type="text" class="form-control"  placeholder="Email">
+         <input type="text" class="form-control"  placeholder="Usuario" id="user">
      </div>
      <div class="form-group">
          <label for="inputPassword" class="text-info">Contraseña</label>
-         <input type="password" class="form-control" placeholder="Contraseña">
+         <input type="password" class="form-control" placeholder="Contraseña" id="pass">
      </div>
      
      <button type="submit" class="btn btn-success">Entrar</button>
